crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_api_map_indexed.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3313
expression: eval_pkl(source)
---
{
  "result": [
    "0:a",
    "1:b",
    "2:c"
  ]
}
