crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_api_min_max_by.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3330
expression: eval_pkl(source)
---
{
  "min_by": "kiwi",
  "max_by": "banana"
}
