crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_api_properties.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3189
expression: eval_pkl(source)
---
{
  "empty": true,
  "notempty": false,
  "length": 3,
  "first": 1,
  "rest": [
    2,
    3
  ],
  "last": 3,
  "single": 42,
  "last_index": 2
}
