crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_api_sort_comprehensive.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3258
expression: eval_pkl(source)
---
{
  "sorted": [
    1,
    1,
    3,
    4,
    5
  ],
  "sorted_by": [
    "apple",
    "banana",
    "cherry"
  ],
  "reversed": [
    3,
    2,
    1
  ]
}
