crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_api_zip_comprehensive.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3286
expression: eval_pkl(source)
---
{
  "zipped": [
    [
      1,
      "a"
    ],
    [
      2,
      "b"
    ],
    [
      3,
      "c"
    ]
  ]
}
