crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_filter_indexed.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    10,
    20,
    30,
    40,
    50
  ],
  "r1": [
    10,
    30,
    50
  ],
  "r2": [
    20,
    40
  ]
}
