crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_fold_indexed.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    10,
    20,
    30
  ],
  "r1": 80
}
