crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_group_by.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3,
    4,
    5
  ],
  "r1": {
    "true": [
      1,
      3,
      5
    ],
    "false": [
      2,
      4
    ]
  },
  "r2": {
    "true": [
      1,
      2,
      3,
      4,
      5
    ]
  },
  "r3": {}
}
